# Ev-Web-Server

./: Cargo.toml  README.md
server/src/: main.rs
server/src/data/: mod.rs
src/: data.rs  handlers.rs  main.rs
src/data/: test.json  testss.rs
