[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.17.0"
axum = "0.6.18"
shuttle-axum = "0.17.0"
tokio = "1.28.2"
serde = "1.0.163"
tower = "0.4.13"
tower-http = {version="0.4.0", features=["cors"]}
serde_json = "1.0.96"
octocrab = "0.23.0"
lazy_static = "1.4.0"